@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. 1.4.14 unreleased
 
+* update 'add_user' recipe to rename folders used for Devise Haml views
 * minor update to 'action_mailer' recipe for "Mandrill by MailChimp" option
 
 h2. 1.4.13 May 19, 2012
